apps/base/infra-mailhog/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
      app.kubernetes.io/component: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailhog
        app.kubernetes.io/component: mailhog
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # mailhog
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mailhog
        image: "registry.lan/mailhog:v1.0.1"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1025
          name: smtp
        - containerPort: 8025
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          tcpSocket:
            port: smtp
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
