apps/base/infra-mailhog/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-mailhog
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: mailhog
      app.kubernetes.io/component: mailhog

  ingress:
    # Allow http from the ingress controller
    - ports:
        - port: http
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

    # Allow smtp from zonemta
    - ports:
        - port: smtp
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra-zonemta
          podSelector:
            matchLabels:
              app.kubernetes.io/name: zonemta
              app.kubernetes.io/component: server
